--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,8 @@
               //console.dir(elem);
              $(this).flip({
 	              direction:'lr',
-	              content:$(['<div class="aplace" id="place'+e.spot_id+'">',
+	              color:'#4a8ec2',
+	              content:$(['<div class="aplace" id="place_backside_'+e.spot_id+'">',
                 '<h3>',
                   '<a href="'+e.external_url+'" target="_blank">',
                   e.name,
