--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,10 @@
   var success_callback = function(d) {
     var latitude = d["coords"]["latitude"];
     var longitude = d["coords"]["longitude"];
-    c = new io.Socket("127.0.0.1", {transports:["websocket", "flashsocket", "htmlfile", "xhr-multipart", "xhr-polling", "jsonp-polling"], port:8080, connectTimeout:1E3, tryTransportsOnConnectTimeout:true, reconnect:true, reconnectionDelay:500});
+    //"gameoflife.duostack.net", {port:9980,
+    
+   // c = new io.Socket("127.0.0.1", {transports:["websocket", "flashsocket", "htmlfile", "xhr-multipart", "xhr-polling", "jsonp-polling"], port:8080, connectTimeout:1E3, tryTransportsOnConnectTimeout:true, reconnect:true, reconnectionDelay:500});
+    c = new io.Socket("gameoflife.duostack.net", {transports:["websocket", "flashsocket", "htmlfile", "xhr-multipart", "xhr-polling", "jsonp-polling"], port:9980, connectTimeout:1E3, tryTransportsOnConnectTimeout:true, reconnect:true, reconnectionDelay:500});
     //console.log(c);
     c.on("connecting", function(kind) {
       alert("connecting");
