not cdn version

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <!--  <script src='js/jquery.ui.touch.js'></script> -->
   <script src='js/jquery.flip.js'></script> 
      <link rel='stylesheet' href='js/humane-themes/bold-dark.css'>
-    <script src="http://cdn.socket.io/stable/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js">
   <!-- The framework --> 
   <link rel="stylesheet" href="css/inuit.css" /> 
   
